# Brain-Games

./: .gitignore  Makefile  README.md  brain_calc_demo.cast  pyproject.toml
brain_games/: engine.py
brain_games/games/: calc.py  engine.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
