[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Brain Games - are games for relaxation and, at the same time, for the work of the brain, the work of the mind, a complex logic puzzle. For those who, during breaks between work, strive to practice logic and mathematics."
authors = ["Алексей <kochetkoov.ao@mail.ru>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]

classifiers = [
  "Programming Language :: Python 3",
  "Operation System :: OS Ubuntu Linux",
]

repository = "https://github.com/kochetkoov/python-project-49"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"


[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
